Fix resizing styling issue.
Updated padding and flex in CSS file to fix
layout issues when screen is smaller.

--- a/style.css
+++ b/style.css
@@ -28,14 +28,16 @@ body {
 
 .pick-area {
     display: flex;
-    padding-left: 35px;
-    margin-top: 20px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+    padding: 0 20px;
 }
 
 .pick-header {
     color: #212a31;
-    padding: 20px 0;
     font-size: 30px;
+    text-align: center;
 }
 
 .buttons-area {
@@ -43,8 +45,7 @@ body {
     flex-wrap: wrap;
     gap: 20px;
     margin-top: 20px;
-    padding: 0 500px;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .btn, .reset-btn {
@@ -69,8 +70,8 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     margin-top: 20px;
     height: 100px;
 }
@@ -79,7 +80,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 15%;
     width: 40%;
     font-size: 20px;
     color: #212a31;
@@ -88,18 +88,19 @@ body {
 .results-msg {
     font-size: 20px;
     height: 35%;
-    width: 40%;
+    width: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     color: #124e66;
 }
 
 .game-tracker {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
     margin-top: 20px;
-    padding: 20px 275px;
 }
 
 .user-area, .computer-area, .counter-details {
@@ -108,6 +109,7 @@ body {
     align-items: center;
     border-bottom: 4px solid #124e66;
     padding: 20px;
+    width: 100px;
 }
 
 .user-score, .computer-score, .counter {
@@ -118,6 +120,7 @@ body {
 .user-name, .computer-name, .counter-title {
     font-size: 12px;
     color: #2e3944;
+    text-align: center;
 }
 
 .final-area {
